--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "create-bucket.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,5 +13,6 @@
   "dependencies": {
     "aws-sdk": "^2.1616.0",
     "express": "^4.19.2"
-  }
+  },
+  "description": ""
 }
